Your commit message

--- a/api/.env
+++ b/api/.env
@@ -2,4 +2,4 @@ MONGO_URI = mongodb+srv://hamzachbit7:12345@cluster0.hj8r9xz.mongodb.net/Blog?re
 
 SCREET_CODE = asdfe45we45w345wegw345werjktjwertkj
 
-PORT_URI = 4000 
+PORT_URI = https://blog-v11.vercel.app/ | 4000
