--- a/api/vercel.json
+++ b/api/vercel.json
@@ -4,13 +4,15 @@
      
       { "src": "*.js", "use": "@vercel/node" }
     ],
-    
-        "routes": [
-        
-          { 
-            "src": "/.*", 
-          "dest": "/"
-         }
-        ]
+    "routes": [
+      
+        { "src": "/api", "dest": "/my-api.js" },
+        { "src": "/post", "methods": ["POST"], "dest": "/index.js" },
+        { "src": "/login", "methods": ["POST"], "dest": "/index.js" },
+        { "src": "/register", "methods": ["POST"], "dest": "/index.js" },
+      
+        { "src": "/legacy", "status": 404 },
+        { "src": "/.*", "dest": "/" }
+      ]
       
   }
